# taxi-duration-prediction-web-service

./: .gitignore  README.md  duration-prediction-checkpoint.ipynb  dvc.yaml  mlflow.db  params.yaml  pyproject.toml
.dvc/: config
data/: .gitignore
deployable-flask-app/: Dockerfile  test.py
mlruns/0/: meta.yaml
notebooks/: duration-prediction-checkpoint.ipynb
reports/: .gitignore
src/: evaluate.py  load_data.py  preprocess.py  train.py
src/train/: train.py
web-service/: predict.py
