[tool.poetry]
name = "taxi duration prediction"
version = "0.1.0"
description = "Predicting the duration of a taxi ride using data about pick-up and drop location"
authors = ["Zulikah Latief"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"
dvc = "^2.55.0"
mlflow = "^2.3.0"
seaborn = "^0.12.2"
xgboost = "^1.7.5"
hyperopt = "^0.2.7"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"
dvc-azure = "^2.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
